fix transition mobile menu

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,7 +15,7 @@ h1 {
   background-color: #00d8ff20;
   /* background-color: #7bb4b420; */
   backdrop-filter: blur(10px);
-  border-radius: 0 0 0.5rem 0.5rem;
+  /* border-radius: 0 0 0.5rem 0.5rem; */
   z-index: 2;
 }
 
