--- a/src/components/MobileMenu.css
+++ b/src/components/MobileMenu.css
@@ -72,7 +72,7 @@
   .aside-utilities.isOpen {
     transform: translateY(0);
     visibility: visible;
-    transition: linear 0.4s;
+    transition: ease 0.4s all;
     /* opacity: 1; */
   }
 }
